<resources>
    <string name="app_name">Tip &amp; Split</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bill_total">Bill Total</string>
    <string name="final_bill">FINAL BILL TOTAL</string>
    <string name="bill">BILL</string>
    <string name="per_person">PER PERSON</string>
    <string name="round_up">Round Up</string>
    <string name="round_down">Round Down</string>
    <string name="tips_all_caps">TIPS</string>
    <string name="tips">Tips</string>
    <string name="split">Split</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="enjoying_this_app">Enjoying this app?</string>
    <string name="appreciation_text">Support its developer!\nI really appreciate your support.</string>
    <string name="coffee_cost">$ 1.99</string>
    <string name="ramen_cost">$ 4.99</string>
    <string name="app_theme">App theme</string>
    <string name="system_default">System default</string>
    <string name="light_mode">Light mode</string>
    <string name="zero_starting_text">0.00</string>
    <string name="round_total">Round Total</string>
    <string name="up">up</string>
    <string name="down">down</string>

</resources>